Fix chunk lookup on Folia and cleanup